[gd_scene load_steps=5 format=3 uid="uid://c7r7s3ifooqnp"]

[ext_resource type="PackedScene" uid="uid://cdtvya2u1xsii" path="res://scenes/Entities/Enemy/enemy.tscn" id="1_bqjw3"]
[ext_resource type="Texture2D" uid="uid://bd7pfkkmuo8c6" path="res://sprites/Enemy/pig_.png" id="2_dhbgp"]
[ext_resource type="Script" path="res://scenes/Entities/Enemy/pig.gd" id="2_mr2nn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r0v53"]
radius = 746.065

[node name="pig" instance=ExtResource("1_bqjw3")]
script = ExtResource("2_mr2nn")

[node name="Shape" parent="." index="0"]
polygon = PackedVector2Array(-50, -30, -51, -6, -35, 21, -22, 23, -16, 13, 3, 15, 9, 21, 20, 21, 26, 12, 33, 22, 47, 22, 59, -5, 60, -36, 41, -53, -29, -51)

[node name="Body_Skin#Skin#Skin" type="Node2D" parent="." index="2"]
position = Vector2(1, 4.00006)
scale = Vector2(0.832, 0.784)

[node name="Skin" type="Sprite2D" parent="Body_Skin#Skin#Skin" index="0"]
position = Vector2(7.21154, 863.52)
texture = ExtResource("2_dhbgp")
offset = Vector2(0, -900)

[node name="hp_bar" parent="." index="4"]
position = Vector2(0, -37)

[node name="hp_bar" parent="hp_bar" index="0"]
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource("CircleShape2D_r0v53")

[node name="Hurt" type="Area2D" parent="." index="7"]
collision_layer = 0
collision_mask = 4

[node name="Shape" type="CollisionPolygon2D" parent="Hurt" index="0"]
polygon = PackedVector2Array(-50, -30, -51, -6, -35, 21, -22, 23, -16, 13, 3, 15, 9, 21, 20, 21, 26, 12, 33, 22, 47, 22, 59, -5, 60, -36, 41, -53, -29, -51)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="Hurt" to="." method="_on_hurt_area_entered"]
